scaleway/manifests/admin-old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-old
  namespace: soberone
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: admin-old
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: admin-old
    spec:
      containers:
      - image: registry.gitlab.com/privilege/admin2:latest
        imagePullPolicy: Always
        name: admin-old
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: gitlab-registry-creds
