scaleway/manifests/admin-old/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-old
  namespace: soberone
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: admin-old
  sessionAffinity: None
  type: ClusterIP
